[tool.poetry]
packages = [{ include = "orchestrator" }]
name = "forgefleet-orchestrator"
version = "0.1.0"
description = ""
authors = ["You"]

[tool.poetry.dependencies]
python = "^3.11"
openai-agents = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
psycopg2-binary = "*"
pgvector = "*"
redis = "*"
pydantic = "*"
